--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.4.32"
+        kotlinVersion = "1.4.32"
         coreVersion = "1.3.2"
 
         appCompatVersion = "1.2.0"
@@ -13,11 +13,13 @@ buildscript {
         viewPager2Version = "1.0.0"
         materialVersion = "1.3.0"
         glideVersion = "4.12.0"
-        espressoIdlingResourceVersion = "3.4.0-alpha05"
+        espressoIdlingResourceVersion = "3.4.0-alpha06"
 
         retrofitVersion = "2.9.0"
         loggingInterceptorVersion = "4.9.1"
         gsonVersion = "2.8.6"
+
+        hiltVersion = "2.35.1"
 
         junitVersion = "4.13.2"
         archTestingVersion = "1.1.1"
@@ -26,7 +28,6 @@ buildscript {
         junitExtVersion = "1.1.2"
         espressoVersion = "3.3.0"
         androidTestVersion = "1.3.0"
-
     }
     repositories {
         google()
@@ -34,7 +35,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
