--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        // kotlin
         kotlinVersion = "1.4.32"
+
+        // core
         coreVersion = "1.3.2"
 
+        // ui
         appCompatVersion = "1.2.0"
         fragmentVersion = "1.3.3"
         lifecycleVersion = "2.3.1"
@@ -15,26 +19,38 @@ buildscript {
         glideVersion = "4.12.0"
         espressoIdlingResourceVersion = "3.4.0-alpha06"
 
+        // api
         retrofitVersion = "2.9.0"
         loggingInterceptorVersion = "4.9.1"
         gsonVersion = "2.8.6"
 
+        // room
+        roomVersion = "2.4.0-alpha02"
+
+        // paging
+        pagingVersion = "3.0.0"
+
+        // dependency injection
         hiltVersion = "2.35.1"
 
+        // testing
         junitVersion = "4.13.2"
+        androidXTestCoreVersion = "1.3.0"
         archTestingVersion = "1.1.1"
-        mockitoVersion = "3.6.0"
+        mockitoVersion = "3.9.0"
         ktxCoroutinesTestVersion = "1.4.3"
         junitExtVersion = "1.1.2"
         espressoVersion = "3.3.0"
         androidTestVersion = "1.3.0"
+        mockitoKotlinVersion = "3.2.0"
+        turbineVersion = "0.5.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:4.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
